# spacy-ewc

./: .coveragerc  README.md  pyproject.toml
.github/workflows/: coverage.yml  docs.yml  publish.yml  test-lint.yml
data_examples/: original_spacy_labels.py  training_data.py
examples/: ewc_ner_training_example.py
spacy_ewc/: __init__.py
spacy_ewc/ewc/: ewc.py
src/ner_trainer/: ewc_ner_trainer.py
src/spacy_ewc/: __init__.py  ewc.py  vector_dict.py
src/spacy_wrapper/: __init__.py  ewc_spacy_wrapper.py
src/utils/: generate_spacy_entities.py
tests/: test_ewc.py  test_ewc_integration.py  test_ewc_spacy_wrapper.py  test_utils_extract_labels.py  test_utils_generate_spacy_entities.py
tests/integration/: test_ewc_spacy_wrapper.py  test_train_nlp_with_ewc.py
